hphp/test/slow/error_message_shape_hint_invalid.php.expectf
Fatal error: Field name already bound in %s on line 4
